--- a/src/main/resources/archetype-resources/__rootArtifactId__-consumer/src/main/resources/application.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-consumer/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
     exclude: org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration,org.springframework.boot.autoconfigure.data.web.SpringDataWebAutoConfiguration
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 dubbo:
   application:
     id: ${artifactId}
