--- a/src/main/resources/archetype-resources/__rootArtifactId__-provider/src/main/resources/application.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-provider/src/main/resources/application.yml
@@ -13,12 +13,12 @@ demo:
     version: 1.0.0
 spring:
   application:
-    name: ${rootArtifactId}-provider
+    name: ${rootArtifactId}-__parentArtifactId__.provider
   datasource:
     username: root
     password: MeiWang_2017@db
     driver-class-name: net.sf.log4jdbc.DriverSpy
-    url: jdbc:log4jdbc:mysql://120.78.220.187:3306/shandian?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+    url: jdbc:log4jdbc:mysql://120.78.220.187:3306/shandian?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
   jpa:
     show-sql: true
     properties:
@@ -26,6 +26,9 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         format_sql: true
       use_sql_comments: true
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 dubbo:
   protocol:
     id: dubbo
@@ -35,7 +38,7 @@ dubbo:
     id: ${artifactId}-registry
     address: nacos://127.0.0.1:8848
   scan:
-    base-packages: com.lgmn.shandian.${rootArtifactId}.provider.service
+    base-packages: com.lgmn.shandian.${rootArtifactId}.__parentArtifactId__.provider.service
   application:
     id: ${artifactId}
     name: ${artifactId}
