--- a/src/main/resources/archetype-resources/__rootArtifactId__-provider/src/main/resources/application.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-provider/src/main/resources/application.yml
@@ -1,44 +1,3 @@
-#set( $symbol_pound = '#' )
-#set( $symbol_dollar = '$' )
-#set( $symbol_escape = '\' )
-server:
-  port: 9090
-management:
-  port: 9091
-nacos:
-  config:
-    server-addr: 127.0.0.1:8848
-demo:
-  service:
-    version: 1.0.0
 spring:
-  application:
-    name: ${rootArtifactId}-__parentArtifactId__.provider
-  datasource:
-    username: root
-    password: MeiWang_2017@db
-    driver-class-name: net.sf.log4jdbc.DriverSpy
-    url: jdbc:log4jdbc:mysql://120.78.220.187:3306/shandian?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        format_sql: true
-      use_sql_comments: true
-  jackson:
-    date-format: yyyy-MM-dd HH:mm:ss
-    time-zone: GMT+8
-dubbo:
-  protocol:
-    id: dubbo
-    name: dubbo
-    port: -1
-  registry:
-    id: ${artifactId}-registry
-    address: nacos://127.0.0.1:8848
-  scan:
-    base-packages: com.lgmn.shandian.${rootArtifactId}.__parentArtifactId__.provider.service
-  application:
-    id: ${artifactId}
-    name: ${artifactId}
+  profiles:
+    active: @filter-resource-name@
