--- a/src/main/resources/archetype-resources/__rootArtifactId__-provider/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-provider/pom.xml
@@ -53,6 +53,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.googlecode.log4jdbc</groupId>
             <artifactId>log4jdbc</artifactId>
         </dependency>
