--- a/src/main/resources/archetype-resources/__rootArtifactId__-provider/src/main/resources/application-test.yml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-provider/src/main/resources/application-test.yml
@@ -5,6 +5,7 @@ spring:
   application:
     name: ${artifactId}
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: net.sf.log4jdbc.DriverSpy
     url: jdbc:log4jdbc:mysql://ShanDianDB:3306/shandian?characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=GMT%2b8
     username: root
@@ -33,7 +34,7 @@ dubbo:
     id: ${artifactId}
     name: ${artifactId}
   scan:
-    basePackages: com.lgmn.${rootArtifactId}.provider.provider.service
+    basePackages: com.lgmn.${rootArtifactId}.provider.service
 demo:
   service:
     version: 1.0.0
